# doi2bibtex

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
doi2bibtex/: doi2bibtex.py
doi2bibtex/bibtex/: __init__.py  bibtexfromdoi.py  clean.py  dedupe.py  openalex.py  read.py  replace.py
doi2bibtex/interact/: __init__.py  ask.py  overwrite.py
doi2bibtex/llm/: base.py  config.py  config_cli.py  groq.py  ollama.py
doi2bibtex/opts/: __init__.py  args.py
doi2bibtex/output/: __init__.py  bibtexdb.py  clipboard.py  html.py  list.py  pdf.py  textfile.py
doi2bibtex/tex/: cites.py
doi2bibtex/util/: LaTexAccents.py  __init__.py  abbreviso.py  bibtexfromdoi.py  cache.py  doifinder.py  doitobibtex.py  encode.py  getdoilogger.py  pdfdownloader.py  spinner.py  validate.py  web.py
doi2bibtex/web_app/: __init__.py  doi2bibtex.py  output.py
doi2bibtex/web_app/templates/: fileupload.html  index.html
src/: doi2bibtex
src/bibtex/: __init__.py  clean.py  dedupe.py  month.py  openalex.py  read.py  replace.py  write.py
src/interact/: __init__.py  ask.py  overwrite.py
src/opts/: args.py
src/output/: __init__.py  bibtexdb.py  clipboard.py  filewriter.py  html.py  list.py  textfile.py
src/util/: LaTexAccents.py  __init__.py  abbreviso.py  cache.py  doifinder.py  doitobibtex.py  encode.py  getlogger.py
src/web_app/: __init__.py  doi2bibtex.py  output.py
src/web_app/templates/: success.html
